replaced the LinkedList used in ListOf by an ArrayList that is more performant + replaced a String.format by String concatenation in SBMLDocument and this improve a lot the speed + pre-compiled the Pattern used to validade the ids